force-app/main/default/objects/Case/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <description>Used for RegE</description>
    <label>Account Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Checking &amp; Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>