force-app/main/default/objects/Case/fields/Auto_Claim_NBA__c.field-meta.xml
<CustomField>
    <fullName>Auto_Claim_NBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Claim NBA</label>
    <type>Checkbox</type>
</CustomField>