force-app/main/default/objects/Case/fields/Card_Script_Read_To_Customer__c.field-meta.xml
<CustomField>
    <fullName>Card_Script_Read_To_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of the RegE demo.</description>
    <label>Card Script Read To Customer</label>
    <type>Checkbox</type>
</CustomField>