force-app/main/default/objects/Case/fields/Case_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Case_Survey_URL__c</fullName>
    <formula>LEFT($Api.Enterprise_Server_URL_320, FIND( &quot;/services&quot;, $Api.Enterprise_Server_URL_320) -1) + &apos;/apex/DE_CustomerSurvey&apos;</formula>
    <label>Case Survey URL</label>
    <type>Text</type>
</CustomField>