force-app/main/default/objects/Case/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <description>Used in RegE demo</description>
    <formula>IF( SLA_Compliant__c , IMAGE(&quot;/resource/milestoneStatus/confirm32.png&quot;, &quot;checkmark&quot;,15,15), &quot;🔥&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compliance Status</label>
    <type>Text</type>
</CustomField>