force-app/main/default/objects/Case/fields/Dispute_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Reasoning__c</fullName>
    <label>Dispute Reasoning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The charges were not made by me/a person authorized by me</fullName>
            </value>
            <value>
                <fullName>The transaction is mine, but I dispute it</fullName>
            </value>
            <value>
                <fullName>I asked the merchant for a credit adjustment, but unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>