force-app/main/default/objects/Case/fields/ED_Override_Default_Config__c.field-meta.xml
<CustomField>
    <fullName>ED_Override_Default_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to override Einstein Discovery fields from Trigger</description>
    <label>ED Override Default Config</label>
    <type>Checkbox</type>
</CustomField>