force-app/main/default/objects/Case/fields/Financial_Deal__c.field-meta.xml
<CustomField>
    <fullName>Financial_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Deal</label>
    <referenceTo>FinancialDeal</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>