force-app/main/default/objects/Case/fields/FINS_Commercial_Banking_TaxID__c.field-meta.xml
<CustomField>
    <fullName>FINS_Commercial_Banking_TaxID__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>Account.INS_FEIN_Tax_ID__c</formula>
    <inlineHelpText>Tax ID is pulled from the related Account record.</inlineHelpText>
    <label>FEIN/Tax ID</label>
    <type>Text</type>
</CustomField>