force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AccountActivity__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AccountActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to include summary and detail activity for the account.</inlineHelpText>
    <label>Account Activity</label>
    <type>Checkbox</type>
</CustomField>