force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AcctTransfers__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AcctTransfers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to include account transfers service.</inlineHelpText>
    <label>Account Transfers</label>
    <type>Checkbox</type>
</CustomField>