force-app/main/default/objects/Case/fields/FINS_CommercialBanking_ACH__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to select same day ACH service.</inlineHelpText>
    <label>ACH (same day)</label>
    <type>Checkbox</type>
</CustomField>