force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AdminEmail__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AdminEmail__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_AdminName__r.Email</formula>
    <inlineHelpText>Administrator Email is pulled from the related Administrator Contact record.</inlineHelpText>
    <label>Administrator Email</label>
    <type>Text</type>
</CustomField>