force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AdminEntitle__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AdminEntitle__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Select the user access and entitlements for the previously specified Administrator.</inlineHelpText>
    <label>Administrator Entitlements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
            </value>
            <value>
                <fullName>Setup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>