force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AdminPhone__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AdminPhone__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_AdminName__r.Phone</formula>
    <inlineHelpText>Primary Contact Phone is pulled from the selected Primary Contact record.</inlineHelpText>
    <label>Administrator Phone</label>
    <type>Text</type>
</CustomField>