force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AdminTitle__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AdminTitle__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_AdminName__r.Title</formula>
    <inlineHelpText>Administrator Title is pulled from the related Administrator Contact record.</inlineHelpText>
    <label>Administrator Title</label>
    <type>Text</type>
</CustomField>