force-app/main/default/objects/Case/fields/FINS_CommercialBanking_AdminUserID__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_AdminUserID__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_AdminName__r.Email</formula>
    <inlineHelpText>Administrator User ID is pulled from the related Administrator Contact record.</inlineHelpText>
    <label>Administrator User ID</label>
    <type>Text</type>
</CustomField>