force-app/main/default/objects/Case/fields/FINS_CommercialBanking_BillPayPresent__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_BillPayPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to include the Bill Payment and Presentation service.</inlineHelpText>
    <label>Bill Payment and Presentation</label>
    <type>Checkbox</type>
</CustomField>