force-app/main/default/objects/Case/fields/FINS_CommercialBanking_CertAuth__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_CertAuth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Certificate of Authority for Corporate Treasury Management Services Agreement</inlineHelpText>
    <label>Certificate of Authority</label>
    <type>Checkbox</type>
</CustomField>