force-app/main/default/objects/Case/fields/FINS_CommercialBanking_CertCorpRes__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_CertCorpRes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Certified Corporate Resolutions for Corporate Treasury Management Services Agreement</inlineHelpText>
    <label>Certified Corporate Resolutions</label>
    <type>Checkbox</type>
</CustomField>