force-app/main/default/objects/Case/fields/FINS_CommercialBanking_Client_Status__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_Client_Status__c</fullName>
    <description>Client status for Commercial Banking - Treasury Management Implementation use case</description>
    <inlineHelpText>Select a status for your client</inlineHelpText>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing</fullName>
                <default>true</default>
                <label>Existing</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>