force-app/main/default/objects/Case/fields/FINS_CommercialBanking_ControlledDisb__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_ControlledDisb__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to select the Controlled Disbursement service.</inlineHelpText>
    <label>Controlled Disbursement</label>
    <type>Checkbox</type>
</CustomField>