force-app/main/default/objects/Case/fields/FINS_CommercialBanking_CustID__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_CustID__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>Account.FinServ__CustomerID__c</formula>
    <inlineHelpText>Customer ID is pulled from the related Account.</inlineHelpText>
    <label>Customer ID</label>
    <type>Text</type>
</CustomField>