force-app/main/default/objects/Case/fields/FINS_CommercialBanking_EDI__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to select the EDI service.</inlineHelpText>
    <label>EDI</label>
    <type>Checkbox</type>
</CustomField>