force-app/main/default/objects/Case/fields/FINS_CommercialBanking_ExportOptions__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_ExportOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to include the Export Options service (i.e. Quicken, Quick Books, Microsoft Money, Comma and Tab)</inlineHelpText>
    <label>Export Options</label>
    <type>Checkbox</type>
</CustomField>