force-app/main/default/objects/Case/fields/FINS_CommercialBanking_Level1Service__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_Level1Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to bundle all Level I Service (Account Activity Summary &amp; Detail, Account Transfers, Bill Payment and Presentment, Online Statements, and Export Options).</inlineHelpText>
    <label>Level I Service</label>
    <type>Checkbox</type>
</CustomField>