force-app/main/default/objects/Case/fields/FINS_CommercialBanking_Level2Services__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_Level2Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to bundle all Level II services (Stop Payments, Same Day ACH).</inlineHelpText>
    <label>Level II Service</label>
    <type>Checkbox</type>
</CustomField>