force-app/main/default/objects/Case/fields/FINS_CommercialBanking_Level3Service__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_Level3Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to bundle all Level III services (EDI, Controlled Disbursement, Wire Transfer Services).</inlineHelpText>
    <label>Level III Service</label>
    <type>Checkbox</type>
</CustomField>