force-app/main/default/objects/Case/fields/FINS_CommercialBanking_MailAddress__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_MailAddress__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>((Account.ShippingStreet) + &quot;, &quot; + (Account.ShippingCity) + &quot;, &quot; + (Account.ShippingState) + &quot; &quot; + (Account.ShippingPostalCode))</formula>
    <inlineHelpText>Mailling Address is pulled from the related Account record.</inlineHelpText>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>