force-app/main/default/objects/Case/fields/FINS_CommercialBanking_MSA__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Master Services Agreement - FINS Commercial Banking Treasury Implementation use case</description>
    <inlineHelpText>Select this checkbox to use the client&apos;s existing Master Services Agreement or specify that the MSA has been completed for a new client.</inlineHelpText>
    <label>Master Services Agreement Received</label>
    <type>Checkbox</type>
</CustomField>