force-app/main/default/objects/Case/fields/FINS_CommercialBanking_NAICS2__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_NAICS2__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>Account.NAICS_Code__c</formula>
    <inlineHelpText>NAICS 2 is pulled from the related Client record.</inlineHelpText>
    <label>NAICS 2</label>
    <type>Text</type>
</CustomField>