force-app/main/default/objects/Case/fields/FINS_CommercialBanking_NextAppMeeting__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_NextAppMeeting__c</fullName>
    <defaultValue>(TODAY() + 30)</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Date is pre-populated based on existing schedule.  This date can be manually changed.</inlineHelpText>
    <label>Next Committee Approval Meeting</label>
    <type>Date</type>
</CustomField>