force-app/main/default/objects/Case/fields/FINS_CommercialBanking_OnlineStatement__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_OnlineStatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to include the Online Statements service (if enrolled).</inlineHelpText>
    <label>Online Statements (if enrolled)</label>
    <type>Checkbox</type>
</CustomField>