force-app/main/default/objects/Case/fields/FINS_CommercialBanking_PhysAddress__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_PhysAddress__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>((Account.BillingStreet) + &quot;, &quot; + (Account.BillingCity) + &quot;, &quot; + (Account.BillingState) + &quot; &quot; + (Account.BillingPostalCode))</formula>
    <inlineHelpText>Address is pulled from the related Account record.</inlineHelpText>
    <label>Physical Address</label>
    <type>Text</type>
</CustomField>