force-app/main/default/objects/Case/fields/FINS_CommercialBanking_PrepoulateMSA__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_PrepoulateMSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-populate from Existing MSA</label>
    <type>Checkbox</type>
</CustomField>