force-app/main/default/objects/Case/fields/FINS_CommercialBanking_RelManager__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_RelManager__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>(Account.Owner.FirstName + &quot; &quot; +  Account.Owner.LastName)</formula>
    <inlineHelpText>Relationship Manager is based on the Client Owner.</inlineHelpText>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>