force-app/main/default/objects/Case/fields/FINS_CommercialBanking_Stop_Payments__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_Stop_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to select the Stop Payments service.</inlineHelpText>
    <label>Stop Payments</label>
    <type>Checkbox</type>
</CustomField>