force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TechContact__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TechContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Select the Technical Contact from the Client.</inlineHelpText>
    <label>Technical Contact Name</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Technical Contact Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>