force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TechEmail__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TechEmail__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_TechContact__r.Email</formula>
    <inlineHelpText>Technical Contact Email is pulled from the related Technical Contact record.</inlineHelpText>
    <label>Technical Contact Email</label>
    <type>Text</type>
</CustomField>