force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TechPhone__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TechPhone__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_TechContact__r.Phone</formula>
    <inlineHelpText>Technical Contact Phone is pulled from the related Technical Contact record.</inlineHelpText>
    <label>Technical Contact Phone</label>
    <type>Text</type>
</CustomField>