force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TechTitle__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TechTitle__c</fullName>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <formula>FINS_CommercialBanking_TechContact__r.Title</formula>
    <inlineHelpText>Technical Contact Title is pulled from the related Technical Contact record.</inlineHelpText>
    <label>Technical Contact Title</label>
    <type>Text</type>
</CustomField>