force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TopApprover__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TopApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Select a contact from the client to be the top level approver.</inlineHelpText>
    <label>Assign Top Level Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Assign Ultimate Approver)</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>