force-app/main/default/objects/Case/fields/FINS_CommercialBanking_TreasMgmtRep__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_TreasMgmtRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Select a user from the list.</inlineHelpText>
    <label>Treasury Management Rep.</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>