force-app/main/default/objects/Case/fields/FINS_CommercialBanking_WireTransfers__c.field-meta.xml
<CustomField>
    <fullName>FINS_CommercialBanking_WireTransfers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Check to select the Wire Transfer services.</inlineHelpText>
    <label>Wire Transfer Services</label>
    <type>Checkbox</type>
</CustomField>