force-app/main/default/objects/Case/fields/FINS_Treasury_Management_Admin__c.field-meta.xml
<CustomField>
    <fullName>FINS_Treasury_Management_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FINS Commercial Banking Treasury Management Implementation use case</description>
    <inlineHelpText>Select a user from the list.</inlineHelpText>
    <label>Treasury Management Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>