force-app/main/default/objects/Case/fields/Fraud_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Charge_Date__c</fullName>
    <description>Fraud for Retail</description>
    <label>Fraud Charge Date</label>
    <type>Date</type>
</CustomField>