force-app/main/default/objects/Case/fields/Fraud_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Transaction__c</fullName>
    <description>Fraud for Retail</description>
    <label>Fraud Transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>