force-app/main/default/objects/Case/fields/Home_Claim_NBA__c.field-meta.xml
<CustomField>
    <fullName>Home_Claim_NBA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Claim NBA</label>
    <type>Checkbox</type>
</CustomField>