force-app/main/default/objects/Case/fields/INS_NewRate__c.field-meta.xml
<CustomField>
    <fullName>INS_NewRate__c</fullName>
    <description>Used in the MuleSoft address change demo</description>
    <label>NewRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>