force-app/main/default/objects/Case/fields/LastStatementToReported__c.field-meta.xml
<CustomField>
    <fullName>LastStatementToReported__c</fullName>
    <description>For RegE. The delta between the last statement date as of the investigation date, and the investigation date, in days.</description>
    <inlineHelpText>The delta between the last statement date as of the investigation date, and the investigation date, in days.</inlineHelpText>
    <label>Last Statement to Reported (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>