force-app/main/default/objects/Case/fields/Network_Responded__c.field-meta.xml
<CustomField>
    <fullName>Network_Responded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for RegE</description>
    <label>Network Responded</label>
    <type>Checkbox</type>
</CustomField>