force-app/main/default/objects/Case/fields/NewRate__c.field-meta.xml
<CustomField>
    <fullName>NewRate__c</fullName>
    <label>NewRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>