force-app/main/default/objects/Case/fields/Order_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Order_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud for Retail</description>
    <label>Order Dispute</label>
    <type>Checkbox</type>
</CustomField>