force-app/main/default/objects/Case/fields/PIN_Information__c.field-meta.xml
<CustomField>
    <fullName>PIN_Information__c</fullName>
    <description>Used for RegE</description>
    <label>PIN Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>