force-app/main/default/objects/Case/fields/Provisional_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisional_Status__c</fullName>
    <description>For the RegE Demo</description>
    <label>Provisional Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Waiting Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>