force-app/main/default/objects/Case/fields/Provisioned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Amount__c</fullName>
    <description>Used for RegE</description>
    <label>Provisioned Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>