force-app/main/default/objects/Case/fields/Recurring_Charge__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fraud for Retail</description>
    <label>Recurring Charge</label>
    <type>Checkbox</type>
</CustomField>