force-app/main/default/objects/Case/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <description>Used for RegE</description>
    <label>Request Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oral</fullName>
            </value>
            <value>
                <fullName>In Writing</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>